--- a/notify/serverless.yml
+++ b/notify/serverless.yml
@@ -20,8 +20,9 @@ service: notifon-notify # NOTE: update this with your service name
 provider:
   name: aws
   runtime: python3.7
-  profile_name: pythonAutomation
-
+  profile_name: ${file(../config.${self:provider.stage}.json):notifier.profile}
+  environment:
+    SLACK_WEBHOOK_URL: ${file(../config.${self:provider.stage}.json):notifier.slack_web_hook_url}
 # you can overwrite defaults here
 #  stage: dev
 #  region: us-east-1
@@ -56,8 +57,8 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  post-to-slack:
+    handler: handler.post_to_slack
     events:
       - cloudwatchEvent:
           event:
